# market-view

./: .gitignore  Cargo.toml  DEVNOTES.md  LICENSE.md  README.md
.github/workflows/: ci.yaml
examples/: print_btc_usdt.rs
src/: book.rs  config.rs  hashmap_chunks.rs  latency_meter.rs  lib.rs  main.rs  pair.rs  token_bucket.rs
src/exchanges/binance/: spot.rs
src/exchanges/binance/spot/: difference.rs  info.rs  pairs.rs  snapshot.rs
