[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.36.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
http = "1.1.0"
reqwest = { version = "0.12.9", features = [
    "rustls-tls-native-roots", "cookies", "zstd", "brotli", "gzip", "json", "stream", "socks", "hickory-dns"
] }
backon = { git = "https://github.com/Xuanwo/backon.git" }
tokio-websockets = { version = "0.10.1", features = [
    "simd", "client", "rustls-platform-verifier", "rustls-tls12", "aws_lc_rs", "rand"
] }
