[package]
name = "market-view"
version = "0.2.0"
edition = "2021"
description = "Market analyzing instrument. Correctly manages local orderbook using websockets depth updates."
license = "MIT"
repository = "https://github.com/lifr0m/market-view"

[dependencies]
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
http = "1.2.0"
reqwest = { version = "0.12.12", features = [
    "rustls-tls-native-roots", "cookies", "zstd", "brotli", "gzip", "json", "stream", "socks", "hickory-dns"
] }
tokio-websockets = { version = "0.11.0", features = [
    "simd", "client", "rustls-platform-verifier", "rustls-tls12", "aws_lc_rs", "rand"
] }
backon = { version = "1.3.0", git = "https://github.com/Xuanwo/backon.git" }
log = { version = "0.2.1", git = "https://github.com/lifr0m/log-rs.git" }
